examples/test/testpolicy9794.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9794
  namespace: namespace22
spec:
  podSelector:
    matchLabels:
      key45: value40
      key13: value41
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value9
          key30: value6
      podSelector:
        matchLabels:
          key7: value34
